<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小智助手</string>
    <string name="ba_fiiting_dog">机器狗</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ba_set_connecting">正在连接音箱,请稍等&#8230;</string>
    <string name="ba_wifi_connected">已连接</string>
    <string name="ba_wifi_unconnect">未连接</string>
    <string name="ba_open">已开机</string>
    <string name="ba_no_open">未开机</string>
    <string name="ba_back">返回</string>
    <string name="ba_cancel">取消</string>
    <string name="ba_confirm">确定</string>
    <string name="ba_wifi_name">wifi名称</string>
    <string name="ba_wifi_ssid">wifi账号</string>
    <string name="ba_wifi_pwd">请输入当前无线网络密码</string>
    <string name="ba_box_wifi_set">请输入wifi账号和密码</string>
    <string name="ba_password_error">您所输入的密码不正确</string>
    <string name="ba_password_is_null">您所输入的密码为空,请重新输入</string>
    <string name="ba_wifi_ssidorpwd_is_null">您所输入的账号或密码为空,请重新输入</string>
    <string name="ba_wifi_ssid_is_null">你还没有选择网络,请选择</string>
    <string name="ba_setting_box_wifi">正在设置音箱网络中&#8230;</string>
    <string name="ba_connecting_box">正在连接小智音箱,请稍等</string>
    <string name="ba_setting_box_wifi_fail">设置音箱网络失败,请检音箱和网络是否正常</string>
    <string name="ba_reset_box">由于音箱路由器账号被修改过,您需要将音箱恢复出厂设置！</string>
    <string name="ba_no_box_ip_toast">没有获取到音箱IP,请检查手机和音箱的网络是否正常</string>
    <string name="ba_box_have_info_toast">已经创建了,无需重复设置</string>
    <string name="ba_config_box_info_error_toast">操作失败,请检音箱和网络是否正常</string>
    <string name="ba_get_data_error_toast">获取数据失败,请检音箱和网络是否正常</string>
    <string name="ba_open_box_error_toast">开机失败,请长按底部的按钮恢复出厂设置!</string>
    <string name="ba_getting_data">正在获取信息,请稍后&#8230;</string>
    <string name="ba_get_info_error_toast">获取信息失败,请检音箱和网络是否正常</string>
    <string name="ba_internet_error_toast">当前网络异常,请检查网络</string>
    <string name="ba_delete_success_toast">删除成功</string>
    <string name="ba_delete_error_toast">删除失败</string>
    <string name="ba_delete_data_error_toast">删除数据失败,请检音箱和网络是否正常</string>
    <string name="ba_add_device_error_toast">添加设备失败,请检音箱和网络是否正常</string>
    <string name="ba_operation_error_toast">操作失败,请检音箱和网络是否正常</string>
    <string name="ba_setting_toast">正在设置数据,请稍后&#8230;</string>
    <string name="ba_box_unconnect_router">你的音箱还未连接到路由器</string>
    <string name="ba_main_manager">配件管理</string>
    <string name="ba_main_tag">我的标签</string>
    <string name="ba_main_mylove">我的最爱</string>
    <string name="ba_main_store">配件商城</string>
    <string name="ba_main_remind">备忘管理</string>
    <string name="ba_main_help">帮助</string>
    <string name="ba_main_voice">语音点歌</string>
    <string name="ba_main_qq">QQ交流群：275446557</string>
    <string name="ba_main_weixin">微信公众号：聚熵智能音箱</string>
    <string name="ba_main_qq_name">QQ交流群：</string>
    <string name="ba_main_qq_code">275446557</string>
    <string name="ba_main_weixin_group_name">微信交流群：</string>
    <string name="ba_main_weixin_group">聚熵小智盒子交流群1</string>
    <string name="ba_service_tel_name">客服电话：</string>
    <string name="ba_service_tel">021&#8211;34668603</string>
    <string name="ba_box_set">音箱设置</string>
    <string name="ba_set_voice_man">发音人</string>
    <string name="ba_set_led_switch">LED灯关闭时间段</string>
    <string name="ba_set_wetaher_remind">定时播报天气</string>
    <string name="ba_select_room">选择所处房间</string>
    <string name="ba_select_device">选择设备</string>
    <string name="ba_select_operation">选择操作</string>
    <string name="ba_select_dog_room">选择机器狗所处房间</string>
    <string name="ba_next">下一步</string>
    <string name="ba_break">跳过</string>
    <string name="ba_start_study">开始学习</string>
    <string name="ba_studying">正在学习</string>
    <string name="ba_not_study_toast">已经有指令在学习，请稍后再试</string>
    <string name="ba_continue_study">继续学习</string>
    <string name="ba_study_success">学习成功</string>
    <string name="ba_study_open_air">打开空调</string>
    <string name="ba_study_close_air">关闭空调</string>
    <string name="ba_study_success_tts">学习成功</string>
    <string name="ba_tts_error">播报失败，请检查网络</string>
    <string name="ba_complete_study">完成学习</string>
    <string name="ba_refresh_study">重新学习</string>
    <string name="ba_study_error_toast">学习失败，请重新再试</string>
    <string name="ba_tts_study_air">步骤一，点击开始学习按钮，步骤二，然后将空调遥控器对准机器狗的鼻子，步骤三，按下遥控器的开关按钮</string>
    <string name="ba_tts_study_tv">步骤一，点击开始学习按钮，步骤二，然后将电视遥控器对准机器狗的鼻子，步骤三，按下遥控器的开关按钮</string>
    <string name="ba_tts_study">步骤一，点击此页面学习按钮，步骤二，然后将产品遥控器对准机器狗的鼻子，步骤三，按下遥控器的开关按钮</string>
    <string name="ba_add_device">添加设备</string>
    <string name="ba_wifi_single_device">wifi单品</string>
    <string name="ba_dog_device">机器狗</string>
    <string name="ba_update_date">正在刷新数据,请稍候&#8230;</string>
    <string name="help_toast01" formatted="false">温馨提示：\n
        1.正常的室内环境,匀速普通话,声音略大于平时说话声\n
        2.如果遇到识别不成功,请调整语速和说话音量,多尝试几次\n
        3.唤醒灯亮表示处于唤醒状态,此时可以对着小智说话,否则说话无效\n
		4.唤醒成功后,唤醒灯会随着说话声大小变化亮度,亮度没有变化说明唤醒没有成功\n
 		5.播放音乐的时候,唤醒功能处于关闭状态</string>
    <string name="help_toast02">音乐功能参考如下句式可以保证识别准确度：\n
        1.“小智,唱首歌”\n
        2.“小智,播放xx”,如"小智,播放青花瓷"\n
        3.“小智,播放xx的歌”,如“小智,播放周杰伦的歌”\n
        4.“小智,播放xx的xx”,如“小智,播放周杰伦的青花瓷”\n
        5.“小智,播放xx的专辑xx”,如.“小智,播放周杰伦的专辑我很忙”\n 
        6.按照类别播放歌曲,如\n 
	        “小智,播放伤感的歌”\n 
	        “小智,播放适合烛光晚餐的歌”\n 
	        “小智,播放睡眠曲”\n 
	        “小智,播放老歌”</string>
    <string name="help_toast03">			音乐功能控制句式参考,可以长按logo按钮说：\n
			1.“换一首”\n
			2.“循环播放”\n
			3.“上一首”\n
			4.“下一首”</string>
    <string name="help_toast04">其他功能参考句式：\n
        1.询问天气,“小智,今天天气怎么样”\n
		2.备忘,“小智,每周一到周五早上8点叫我起床”
              \t\t“小智,1个小时后提醒我喝水”\n
		3.笑话,“小智,讲个笑话”\n
		4.聊天模式,“小智,进入聊天模式”,可以进入聊天模式,和音箱进行聊天对话\n
		5.儿童故事,“小智,讲个故事”</string>
    <string name="main_connect_wifi">请将手机连接到wifi网络</string>
    <string name="wifi_config_toast">提示：\n1.请将手机靠近音箱\n2.点击下一步前,请确定音箱已经开机</string>
    <string name="wifi_config_connect_toast">正在连接小智音箱,请稍等&#8230;</string>
    <string name="ba_input_wifi_pwd_toast">请输入下面路由器账号对应的密码</string>
    <string name="wifi_config_error_toast">声波配置失败,请检查:
\n音箱是否开机,顶部蓝灯处于闪烁状态
\n声波配置时,请尽量保持周围环境安静
\n可以联系我们4008609157</string>
    <string name="set_box_time_error_toast">起止时间不能够设置相同,请重新设置</string>
    <string name="ba_main_music">我的音乐</string>
    <string name="ba_main_beiwang">备忘列表</string>
    <string name="ba_main_smart">智能设备</string>
    <string name="ba_main_ximalaya">喜马拉雅</string>
    <string name="ba_main_mode">情景模式</string>
    <string name="ba_main_set">设置</string>
    <string name="ba_main_about">关于</string>
    <string name="ba_main_contactus_service_phone_key">客服电话</string>
    <string name="ba_main_contactus_service_phone_value">400-860-9157</string>
    <string name="ba_main_contactus_qq_group_key">QQ群号</string>
    <string name="ba_main_contactus_qq_group_value">275446557</string>
    <string name="ba_main_contactus_weixin_key">微信号</string>
    <string name="ba_main_contactus_weixin_value">smallzhi101</string>
    <string name="ba_main_contactus_company_name">聚熵信息技术（上海）有限公司&#160;&#160;版权所有</string>
    <string name="ba_main_contactus_website">小智官网&#160;www.smallzhi.com</string>
    <string name="ba_main_contactus_client_version">客户端版本</string>
    <string name="ba_tag">标签</string>
    <string name="ba_add">添加</string>
    <string name="music_xieyi">正在使用以上协议播放音乐&#8230;</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="clear_history">清除搜索历史记录</string>
	<string name="old_box_tip">当前音箱版本不支持，音箱将在自动升级后支持</string>
</resources>