<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/about_bg"
    android:orientation="vertical" >

    <include layout="@layout/head_view_new" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="37dp"
        android:src="@drawable/about_sz_logo" />

    <TextView
        android:id="@+id/about_us_soft_version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="37dp"
        android:text="版本号1.0.0"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/d4" />

        <RelativeLayout
             android:id="@+id/main_contact_us_mobile_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp" >

            <TextView
                android:id="@+id/main_contact_us_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="13dp"
                android:text="@string/ba_main_contactus_service_phone_key"
                android:textColor="@color/black"
                android:textSize="@dimen/text_content_size" />

            <TextView
                android:id="@+id/main_contact_us_mobile_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/ba_main_contactus_service_phone_value"
                android:textColor="#888888"
                android:textSize="@dimen/text_content_size" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="13dp"
            android:background="@color/d4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp" >

            <TextView
                android:id="@+id/main_about_rom_tv_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="13dp"
                android:text="@string/ba_main_contactus_qq_group_key"
                android:textColor="@color/black"
                android:textSize="@dimen/text_content_size" />

            <TextView
                android:id="@+id/main_about_rom_tv_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/ba_main_contactus_qq_group_value"
                android:textColor="#888888"
                android:textSize="@dimen/text_content_size" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="13dp"
            android:background="@color/d4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp" >

            <TextView
                android:id="@+id/main_about_song_num_tv_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="13dp"
                android:text="@string/ba_main_contactus_weixin_key"
                android:textColor="@color/black"
                android:textSize="@dimen/text_content_size" />

            <TextView
                android:id="@+id/main_about_song_num_tv_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/ba_main_contactus_weixin_value"
                android:textColor="#888888"
                android:textSize="@dimen/text_content_size" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/d4" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:background="#00ffffff" >
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ba_main_contactus_company_name"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/ba_main_contactus_website"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>