<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/about_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include layout="@layout/head_view_new" />

    <RelativeLayout
        android:id="@+id/select_device_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/main_set_item_selector" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="13dp"
            android:text="@string/ba_select_device"
            android:textColor="@color/black"
            android:textSize="@dimen/text_content_size" />

        <TextView
            android:id="@+id/add_device_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/iv"
            android:textColor="#888"
            android:textSize="@dimen/text_content_size" />

        <ImageView
            android:id="@+id/iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/online_box_item_ico" />
    </RelativeLayout>

    <View
        android:id="@+id/user_info_divider_view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cccccc" />

    <RelativeLayout
        android:id="@+id/device_operation_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/main_set_item_selector" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="13dp"
            android:text="@string/ba_select_operation"
            android:textColor="@color/black"
            android:textSize="@dimen/text_content_size" />

        <TextView
            android:id="@+id/operation_device_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/iv"
            android:textColor="#888"
            android:textSize="@dimen/text_content_size" />

        <ImageView
            android:id="@+id/iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/online_box_item_ico" />
    </RelativeLayout>

    <Button
        android:id="@+id/add_device_next_btn"
        style="@style/MyButton"
        android:layout_marginTop="150dp"
        android:text="@string/ba_next" />

</LinearLayout>