<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/main_title"
            android:layout_width="match_parent"
            android:layout_height="45.0dip"
            android:background="@drawable/ba_view_head_bg" >

            <TextView
                android:id="@+id/head_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxWidth="150dp"
                android:singleLine="true"
                android:text="title"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <ImageButton
                android:id="@+id/main_more_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:padding="8dp"
                android:src="@drawable/main_more_normal" />
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:orientation="horizontal" >

                    <RelativeLayout
                        android:id="@+id/main_relative_btn_music"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:background="@drawable/ba_main_item_btn_selector" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/main_iv_music"
                            android:layout_centerInParent="true"
                            android:drawableTop="@drawable/ba_main_music"
                            android:gravity="center_horizontal"
                            android:text="@string/ba_main_music"
                            android:textColor="@color/grey"
                            android:textSize="16dp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:background="#efefef" />

                    <RelativeLayout
                        android:id="@+id/main_relative_btn_ximalaya"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:background="@drawable/ba_main_item_btn_selector" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/main_iv_memo"
                            android:layout_centerInParent="true"
                            android:drawableTop="@drawable/ba_main_ximalaya"
                            android:gravity="center_horizontal"
                            android:text="@string/ba_main_ximalaya"
                            android:textColor="@color/grey"
                            android:textSize="16dp" />
                    </RelativeLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#efefef" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:orientation="horizontal" >

                    <RelativeLayout
                        android:id="@+id/main_relative_btn_smart"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:background="@drawable/ba_main_item_btn_selector" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/main_iv_smart"
                            android:layout_centerInParent="true"
                            android:drawableTop="@drawable/ba_main_smart"
                            android:gravity="center_horizontal"
                            android:text="@string/ba_main_smart"
                            android:textColor="@color/grey"
                            android:textSize="16dp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:background="#efefef" />

                    <RelativeLayout
                        android:id="@+id/main_relative_btn_mode"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:background="@drawable/ba_main_item_btn_selector" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/main_iv_mode"
                            android:layout_centerInParent="true"
                            android:drawableTop="@drawable/ba_main_mode"
                            android:gravity="center_horizontal"
                            android:text="@string/ba_main_mode"
                            android:textColor="@color/grey"
                            android:textSize="16dp" />
                    </RelativeLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#efefef" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:orientation="horizontal" >

                    <RelativeLayout
                        android:id="@+id/main_relative_btn_memo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:background="@drawable/ba_main_item_btn_selector" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/main_iv_set"
                            android:layout_centerInParent="true"
                            android:drawableTop="@drawable/ba_main_memo"
                            android:gravity="center_horizontal"
                            android:text="@string/ba_main_beiwang"
                            android:textColor="@color/grey"
                            android:textSize="16dp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:background="#efefef" />

                    <RelativeLayout
                        android:id="@+id/main_relative_btn_help"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:background="@drawable/ba_main_item_btn_selector" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/main_iv_set"
                            android:layout_centerInParent="true"
                            android:drawableTop="@drawable/ba_main_help"
                            android:gravity="center_horizontal"
                            android:text="@string/ba_main_help"
                            android:textColor="@color/grey"
                            android:textSize="16dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/main_relative_btn_set"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:background="@drawable/ba_main_item_btn_selector"
                        android:visibility="gone" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/main_iv_about"
                            android:layout_centerInParent="true"
                            android:drawableTop="@drawable/ba_main_set"
                            android:gravity="center_horizontal"
                            android:text="@string/ba_main_set"
                            android:textColor="@color/grey"
                            android:textSize="16dp" />
                    </RelativeLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#efefef" />

                <RelativeLayout
                    android:id="@+id/main_relative_btn_voice"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/ba_main_item_btn_selector"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/main_voice_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/main_iv_set"
                        android:layout_centerInParent="true"
                        android:drawableTop="@drawable/ba_main_voice"
                        android:gravity="center_horizontal"
                        android:text="@string/ba_main_voice"
                        android:textColor="#888888"
                        android:textSize="16dp" />
                </RelativeLayout>
            </LinearLayout>

            <View
                android:id="@+id/grey_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#26000000"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

</FrameLayout>